# deriving-compat

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  deriving-compat.cabal
.github/workflows/: haskell-ci.yml
src/Data/: Deriving.hs
src/Data/Bounded/: Deriving.hs
src/Data/Bounded/Deriving/: Internal.hs
src/Data/Deriving/: Internal.hs  Via.hs
src/Data/Deriving/Via/: Internal.hs
src/Data/Enum/: Deriving.hs
src/Data/Enum/Deriving/: Internal.hs
src/Data/Eq/: Deriving.hs
src/Data/Eq/Deriving/: Internal.hs
src/Data/Foldable/: Deriving.hs
src/Data/Functor/: Deriving.hs
src/Data/Functor/Deriving/: Internal.hs
src/Data/Ix/: Deriving.hs
src/Data/Ix/Deriving/: Internal.hs
src/Data/Ord/: Deriving.hs
src/Data/Ord/Deriving/: Internal.hs
src/Data/Traversable/: Deriving.hs
src/Text/Read/: Deriving.hs
src/Text/Read/Deriving/: Internal.hs
src/Text/Show/: Deriving.hs
src/Text/Show/Deriving/: Internal.hs
tests/: BoundedEnumIxSpec.hs  BoundedEnumSpec.hs  BoundedSpec.hs  DerivingSpec.hs  DerivingViaSpec.hs  EqSpec.hs  FoldableSpec.hs  FunctorSpec.hs  GH24Spec.hs  GH27Spec.hs  GH31Spec.hs  GH6Spec.hs  OrdSpec.hs  ReadSpec.hs  ShowSpec.hs
tests/Types/: EqOrd.hs  ReadShow.hs
