name:                deriving-compat
version:             0.6.8
synopsis:            Backports of GHC deriving extensions
description:         @deriving-compat@ provides Template Haskell functions that
                     mimic @deriving@ extensions that were introduced or modified
                     in recent versions of GHC. Currently, the following
                     typeclasses/extensions are covered:
                     .
                     * Deriving @Bounded@
                     .
                     * Deriving @Enum@
                     .
                     * Deriving @Ix@
                     .
                     * Deriving @Eq@
                     .
                     * Deriving @Ord@
                     .
                     * Deriving @Read@
                     .
                     * Deriving @Show@
                     .
                     * @DeriveFoldable@
                     .
                     * @DeriveFunctor@
                     .
                     * @DeriveTraversable@
                     .
                     * @GeneralizedNewtypeDeriving@ (with GHC 8.2 or later)
                     .
                     * @DerivingVia@ (with GHC 8.2 or later)
                     .
                     See the "Data.Deriving" module for a full list of backported changes.
                     .
                     In addition, @deriving-compat@ also provides some additional
                     @deriving@ functionality that has not yet been merged into
                     upstream GHC. Aside from the GHC @deriving@ extensions
                     mentioned above, @deriving-compat@ also permits deriving
                     instances of classes in the @Data.Functor.Classes@ module,
                     covering the @Eq1@, @Eq2@, @Ord1@, @Ord2@, @Read1@,
                     @Read2@, @Show1@, and @Show2@ classes. This extra
                     functionality is outside of the main scope of
                     @deriving-compat@, as it does not backport extensions that
                     exist in today's GHC. Nevertheless, the underlying Template
                     Haskell machinery needed to derive @Eq@ and friends
                     extends very naturally to @Eq1@ and friends, so this extra
                     functionality is included in @deriving-compat@ as a
                     convenience.
                     .
                     Note that some recent GHC typeclasses/extensions are not covered by this package:
                     .
                     * @DeriveDataTypeable@
                     .
                     * @DeriveGeneric@, which was introducted in GHC 7.2 for deriving
                       @Generic@ instances, and modified in GHC 7.6 to allow derivation
                       of @Generic1@ instances. Use @Generics.Deriving.TH@ from
                       @<http://hackage.haskell.org/package/generic-deriving generic-deriving>@
                       to derive @Generic(1)@ using Template Haskell.
                     .
                     * @DeriveLift@, which was introduced in GHC 8.0 for deriving
                       @Lift@ instances. Use @Language.Haskell.TH.Lift@ from
                       @<http://hackage.haskell.org/package/th-lift th-lift>@
                       to derive @Lift@ using Template Haskell.
                     .
                     * The @Bifunctor@ typeclass, which was introduced in GHC 7.10,
                       as well as the @Bifoldable@ and @Bitraversable@ typeclasses, which
                       were introduced in GHC 8.2. Use @Data.Bifunctor.TH@ from
                       @<http://hackage.haskell.org/package/bifunctors bifunctors>@
                       to derive these typeclasses using Template Haskell.
homepage:            https://github.com/haskell-compat/deriving-compat
bug-reports:         https://github.com/haskell-compat/deriving-compat/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
stability:           Experimental
copyright:           (C) 2015-2017 Ryan Scott
category:            Compatibility
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.3
                   , GHC == 9.12.2
                   , GHC == 9.14.1
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/haskell-compat/deriving-compat

library
  exposed-modules:     Data.Deriving
                       Data.Deriving.Internal

                       Data.Bounded.Deriving
                       Data.Bounded.Deriving.Internal
                       Data.Deriving.Via
                       Data.Deriving.Via.Internal
                       Data.Enum.Deriving
                       Data.Enum.Deriving.Internal
                       Data.Eq.Deriving
                       Data.Eq.Deriving.Internal
                       Data.Foldable.Deriving
                       Data.Functor.Deriving.Internal
                       Data.Functor.Deriving
                       Data.Ix.Deriving
                       Data.Ix.Deriving.Internal
                       Data.Ord.Deriving
                       Data.Ord.Deriving.Internal
                       Data.Traversable.Deriving
                       Text.Read.Deriving
                       Text.Read.Deriving.Internal
                       Text.Show.Deriving
                       Text.Show.Deriving.Internal
  build-depends:       base                >= 4.9  && < 5
                     , containers          >= 0.1  && < 0.9
                     , ghc-boot-th
                     , template-haskell    >= 2.11 && < 2.25
                     , th-abstraction      >= 0.5  && < 0.8

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       BoundedEnumIxSpec
                       DerivingViaSpec
                       EqSpec
                       FunctorSpec
                       OrdSpec
                       ReadSpec
                       ShowSpec
                       GH6Spec
                       GH24Spec
                       GH27Spec
                       GH31Spec

                       Types.EqOrd
                       Types.ReadShow
  build-depends:       base                >= 4.9 && < 5
                     , deriving-compat
                     , hspec               >= 1.8
                     , QuickCheck          >= 2   && < 3
                     , template-haskell
  build-tool-depends:  hspec-discover:hspec-discover >= 1.8

  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
  if impl(ghc >= 8.6)
    ghc-options:       -Wno-star-is-type
  if impl(ghc >= 9.0)
    ghc-options:       -fenable-th-splice-warnings
